<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0ac74c"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="170dp"
        android:fontFamily="sans-serif"
        android:text="@string/profile_info"
        android:textColor="#101E7E"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPersonEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
        android:id="@+id/editTextPersonUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonEmailAddress" />

    <EditText
        android:id="@+id/editTextPersonFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/enter_your_first_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonUsername" />

    <EditText
        android:id="@+id/editTextPersonLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/enter_your_last_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonFirstName" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="96dp"
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonLastName" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="45dp"
        android:text="@string/save"
        android:textColor="#00E676"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="86dp"
        android:text="@string/clear"
        android:backgroundTint="#c70a0a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <TextView
        android:id="@+id/errorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="5dp"
        android:text=""
        android:textColor="#A10000"
        app:layout_constraintBottom_toTopOf="@+id/editTextPersonUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/errorUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="7dp"
        android:text=""
        android:textColor="#A10000"
        app:layout_constraintBottom_toTopOf="@+id/editTextPersonFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonUsername"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/errorFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginEnd="275dp"
        android:layout_marginBottom="6dp"
        android:text=""
        android:textColor="#A10000"
        app:layout_constraintBottom_toTopOf="@+id/editTextPersonLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonFirstName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/errorLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="273dp"
        android:text=""
        android:textColor="#A10000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonLastName" />

    <TextView
        android:id="@+id/errorAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="274dp"
        android:text=""
        android:textColor="#A10000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <TextView
        android:id="@+id/errorEmptyField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="91dp"
        android:text="You need to fill all fields"
        android:visibility="invisible"
        android:textColor="#D11010"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

</androidx.constraintlayout.widget.ConstraintLayout>